devops/iam-did-auth-proxy-dev/templates/extra-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    nginx.ingress.kubernetes.io/limit-rate: "10r/h"
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* {
          proxy_pass https://www.google.com;
          proxy_set_header Host www.google.com;
          proxy_set_header Referer https://www.google.com;
          proxy_set_header User-Agent $http_user_agent;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header Accept-Encoding "";
          proxy_set_header Accept-Language $http_accept_language;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          sub_filter google.com example.com;
          sub_filter_once off;
      }
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: did-auth-proxy-helm
            port:
              number: 80
